add_library(1DPipes
	AllPipeMethods.cpp
	TConstantConditionsPipe.cpp
	TGenericSource.cpp
	TNullSource.cpp
	TTubo.cpp
	TPipeExtHeat.cpp
	TPipeExtHeatW.cpp
	TPipeExtHeatA.cpp
	TPortExtHeat.cpp
	TPipeIntHeat.cpp
	TPipeHeatT.cpp
	TPipeIntHeatIntake.cpp
	TPipeIntHeatExhaust.cpp
	TPortIntHeatIntake.cpp
	TPortIntHeatExhaust.cpp
	TPipeFriction.cpp
	TPipeFrictionColebrook.cpp
	TPipe.cpp
	TVolute.cpp
	TVirtualPipe.cpp
	PipeMethod.cpp
	Godunov.cpp
	LateralNozzles.cpp
	LaxWendroff.cpp
	Limiters.cpp
	MUSCL.cpp
	RiemannSolvers.cpp)
