add_library(
  Boundaries
  AllBoundaryConditions.cpp
  BoundaryFunctions.cpp
  BoundaryCondition.cpp
  ClosedEnd.cpp
  ConstantConditionsBC.cpp
  ExternalConnectionBC.cpp
  IncidentPressure.cpp
  PipeConnection.cpp
  Connect0Dto1D.cpp
  PressureBC.cpp
  TCCCilindro.cpp
  TCCCompresor.cpp
  TCCCompresorVolumetrico.cpp
  TCCDeposito.cpp
  TCCDescargaExtremoAbierto.cpp
  TCCEntradaCompresor.cpp
  TCCExternalConnection.cpp
  TCCExternalConnectionVol.cpp
  TCCExtremoAnecoico.cpp
  TCCExtremoCerrado.cpp
  TCCExtremoInyeccion.cpp
  TCCPerdidadePresion.cpp
  TCCPreVble.cpp
  TCCPulso.cpp
  TCCRamificacion.cpp
  TCCUnionEntreDepositos.cpp
  TCCUnionEntreTubos.cpp
#   TCCValvula.cpp
  TCFDConnection.cpp
  TCondicionContorno.cpp
  TEntradaPulso.cpp)
